log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Fri 31 Mar 2023 02:18:36 PM UTC: 
 arraylist.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  0|6
total_score: 0/70
b50d85c
Fri 31 Mar 2023 02:20:41 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ae9735c
Fri 31 Mar 2023 02:23:09 PM UTC: 
 arraylist.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
07ea3cc
Fri 31 Mar 2023 02:32:53 PM UTC: 
 arraylist.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  5|3
total_score: 30/70
951084c
Fri 31 Mar 2023 06:32:53 PM UTC: 
 arraylist.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  5|3
total_score: 30/70
56fd14c
Fri 31 Mar 2023 06:33:14 PM UTC: 
 arraylist.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
eb8c530
Fri 31 Mar 2023 06:33:50 PM UTC: 
 arraylist.c | 12 ------------
 1 file changed, 12 deletions(-)
 tests:  5|3
total_score: 30/70
8de8596
Fri 31 Mar 2023 06:35:55 PM UTC: 
 arraylist.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:57:7: error: ‘tam’ undeclared (first use in this function); did you mean ‘tm’?
   57 |       tam = -1 * l->size;
      |       ^~~
      |       tm
arraylist.c:57:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1a6b162
Fri 31 Mar 2023 06:36:05 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6d8ab8e
Fri 31 Mar 2023 06:36:17 PM UTC: 
 arraylist.c | 13 -------------
 1 file changed, 13 deletions(-)
 tests:  5|3
total_score: 30/70
b53f00f
Fri 31 Mar 2023 06:37:23 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:51:15: error: ‘l’ is a pointer; did you mean to use ‘->’?
   51 |       return l.data[i];
      |               ^
      |               ->
Compilation failed
6ada7f7
